# parallel

./: README.md
mpi/: README.md  hello.c  hello.f  hello.f90  integrate1.c  integrate1.f90  integrate2.c  integrate2.f90  integrate3.c  integrate3.f90  linadv1d.c  linadv1d.py  poisson3d.c  poisson3d.f90  poisson3d.in
mpi/convect2d/: Convection2DMPI.cpp  README.md  merge.sh
mpi/euler2d/: IsentropicVortex2DMPI.cpp
mpi/hager/: Jacobi_MPI_taskmode.F  Jacobi_MPI_vectormode.F  dummy.c  timing.c  timing.h  triad.f90
openmp/: README.md  array_sum.cc  hello.cc  hello.f90  integral.f90  jacobi.cc  jacobi.f90  seidel.f90  sum_reduction.f90
petsc/: README.md  hello.c  makefile
petsc/poisson2d/: CMakeLists.txt  LICENSE  README.md  main.cc  makefile
